# taskify

./: .gitignore  README.md  config.toml
.github/workflows/: docs.yml  release.yml  test.yml
cli/: Cargo.toml  README.md
cli/src/: actions.rs  app.rs  event.rs  handler.rs  keybindings.rs  lib.rs  main.rs  tui.rs  ui.rs
cli/src/states/: home.rs  mod.rs  project.rs
taskify/: Cargo.toml
taskify/migration/: Cargo.toml
taskify/migration/src/: m20220101_000001_create_table.rs
taskify/migrations/: 20240614141952_project_table.sql
taskify/src/: lib.rs
taskify/src/config/: mod.rs
taskify/src/db/: mod.rs  projects.rs
taskify/src/entities/: mod.rs  prelude.rs  project.rs
taskify/src/tests/: mod.rs
