[package]
name = "cli"
description = "Taskify CLI: Empowering Productivity with a Simple, Safe, and Integrated Task Management Solution"
version = "0.0.1"
edition = "2021"
authors = ["Marios Mitsios <xrteach@gmail.com>"]
readme = "../README.md"
license = "GPL-3.0-or-later"

[dependencies]
crossterm = "0.27.0"
ratatui = "0.25.0"
taskify = {"path" = "../taskify/"}