[package]
name = "cli"
version = "0.1.0"
authors = ["Marios Mitsios <xrteach@gmail.com>"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
ratatui = "0.25.0"
tokio = { version = "1.35.1", features = ["full"] }
taskify = { path = "../taskify/" }