[package]
name = "taskify"
description = "Taskify: Empowering Productivity with a Simple, Safe, and Integrated Task Management Solution"
version = "0.0.1"
edition = "2021"
authors = ["Marios Mitsios <xrteach@gmail.com>"]
readme = "../README.md"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4.20"
serde = { version = "1.0.195", features = ["serde_derive"] }
simplelog = "0.12.1"
toml = "0.8.8"
