[package]
name = "taskify"
description = "Taskify: Empowering Productivity with a Simple, Safe, and Integrated Task Management Solution"
version = "0.0.1"
edition = "2021"
authors = ["Marios Mitsios <xrteach@gmail.com>"]
readme = "../README.md"
license = "GPL-3.0-or-later"

[dependencies]
log = "0.4.20"
serde = { version = "1.0.195", features = ["serde_derive"] }
simplelog = "0.12.1"
tokio = { version = "1.35.1", features = ["full"] }
toml = "0.8.8"
sqlx = { version = "0.7.4", features = ["runtime-tokio", "uuid", "chrono", "sqlite"] }
chrono = "0.4.38"
sea-query = { version = "0.30.7", features = ["backend-sqlite", "derive", "attr", "with-chrono", "with-uuid"] }
uuid = { version = "1.8.0", features = ["v4"] }
